force-app/main/default/objects/Opportunity/fields/Account1_Amount__c.field-meta.xml
<CustomField>
    <fullName>Account1_Amount__c</fullName>
    <label>Account 1 Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>