force-app/main/default/objects/Opportunity/fields/Account1_Name__c.field-meta.xml
<CustomField>
    <fullName>Account1_Name__c</fullName>
    <label>Account 1 Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>