force-app/main/default/objects/Opportunity/fields/Account1_Number__c.field-meta.xml
<CustomField>
    <fullName>Account1_Number__c</fullName>
    <label>Account 1 Number</label>
    <length>55</length>
    <type>Text</type>
</CustomField>