force-app/main/default/objects/Opportunity/fields/Account1_Type__c.field-meta.xml
<CustomField>
    <fullName>Account1_Type__c</fullName>
    <label>Account 1 Type</label>
    <length>55</length>
    <type>Text</type>
</CustomField>