force-app/main/default/objects/Opportunity/fields/Account2_Name__c.field-meta.xml
<CustomField>
    <fullName>Account2_Name__c</fullName>
    <label>Account 2 Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>