force-app/main/default/objects/Opportunity/fields/Account2_Number__c.field-meta.xml
<CustomField>
    <fullName>Account2_Number__c</fullName>
    <label>Account 2 Number</label>
    <length>55</length>
    <type>Text</type>
</CustomField>