force-app/main/default/objects/Opportunity/fields/Account2_Type__c.field-meta.xml
<CustomField>
    <fullName>Account2_Type__c</fullName>
    <label>Account 2 Type</label>
    <length>55</length>
    <type>Text</type>
</CustomField>