force-app/main/default/objects/Opportunity/fields/Account3_Amount__c.field-meta.xml
<CustomField>
    <fullName>Account3_Amount__c</fullName>
    <label>Account 3 Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>