force-app/main/default/objects/Opportunity/fields/Account3_Name__c.field-meta.xml
<CustomField>
    <fullName>Account3_Name__c</fullName>
    <label>Account 3 Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>