force-app/main/default/objects/Opportunity/fields/Account3_Number__c.field-meta.xml
<CustomField>
    <fullName>Account3_Number__c</fullName>
    <label>Account 3 Number</label>
    <length>55</length>
    <type>Text</type>
</CustomField>