force-app/main/default/objects/Opportunity/fields/Account3_Type__c.field-meta.xml
<CustomField>
    <fullName>Account3_Type__c</fullName>
    <label>Account 3 Type</label>
    <length>55</length>
    <type>Text</type>
</CustomField>