force-app/main/default/objects/Opportunity/fields/accountOwnerFormula__c.field-meta.xml
<CustomField>
    <fullName>accountOwnerFormula__c</fullName>
    <formula>Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>accountOwnerFormula</label>
    <type>Text</type>
</CustomField>