force-app/main/default/objects/Opportunity/fields/Active_Loan__c.field-meta.xml
<CustomField>
    <fullName>Active_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Loan</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Scenarios</relationshipLabel>
    <relationshipName>Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>