force-app/main/default/objects/Opportunity/fields/Ad_Consented__c.field-meta.xml
<CustomField>
    <fullName>Ad_Consented__c</fullName>
    <description>Date / time borrower consented to submitting information to us via ad specified in Ad Description</description>
    <label>Ad Consented</label>
    <type>DateTime</type>
</CustomField>