force-app/main/default/objects/Opportunity/fields/Adjustments_Other_Credits__c.field-meta.xml
<CustomField>
    <fullName>Adjustments_Other_Credits__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Available on the LE and CD, typically includes items paid by others such as tax prorations</inlineHelpText>
    <label>Adjustments &amp; Other Credits</label>
    <type>Checkbox</type>
</CustomField>