force-app/main/default/objects/Opportunity/fields/Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee__c</fullName>
    <label>Admin Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyout (Fee in Price)</fullName>
            </value>
            <value>
                <fullName>Charge to Borrower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>