force-app/main/default/objects/Opportunity/fields/Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Appraisal__c</fullName>
    <label>Appraisal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reimbursed to LO</fullName>
            </value>
            <value>
                <fullName>Reimbursed to Broker</fullName>
            </value>
            <value>
                <fullName>Paid by Client</fullName>
            </value>
            <value>
                <fullName>Expecting PIW</fullName>
            </value>
            <value>
                <fullName>PIW</fullName>
            </value>
            <value>
                <fullName>Streamline / IRRRL</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>