force-app/main/default/objects/Opportunity/fields/Appraisal_Company__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Company__c</fullName>
    <label>Appraisal Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>