force-app/main/default/objects/Opportunity/fields/Appraisal_Contingency__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Contingency__c</fullName>
    <label>Appraisal Contingency</label>
    <type>Date</type>
</CustomField>