force-app/main/default/objects/Opportunity/fields/Appraisal_Fee__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Fee__c</fullName>
    <inlineHelpText>804 in Fee Itemization</inlineHelpText>
    <label>Appraisal Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>