force-app/main/default/objects/Opportunity/fields/Appraisal_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Ordered__c</fullName>
    <label>Appraisal Ordered</label>
    <type>Date</type>
</CustomField>