force-app/main/default/objects/Opportunity/fields/Appraisal_Received__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Received__c</fullName>
    <label>Appraisal Received</label>
    <type>Date</type>
</CustomField>