force-app/main/default/objects/Opportunity/fields/Appraisal_Required__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appraisal Required</label>
    <type>Checkbox</type>
</CustomField>