force-app/main/default/objects/Opportunity/fields/Appraiser__c.field-meta.xml
<CustomField>
    <fullName>Appraiser__c</fullName>
    <label>Appraiser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>