force-app/main/default/objects/Opportunity/fields/Appraiser_Contact__c.field-meta.xml
<CustomField>
    <fullName>Appraiser_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appraiser</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loans (Appraiser)</relationshipLabel>
    <relationshipName>Appraiser_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>