force-app/main/default/objects/Opportunity/fields/Approval_Expected__c.field-meta.xml
<CustomField>
    <fullName>Approval_Expected__c</fullName>
    <label>Approval Expected</label>
    <type>Date</type>
</CustomField>