force-app/main/default/objects/Opportunity/fields/Asset_Submission_Notes__c.field-meta.xml
<CustomField>
    <fullName>Asset_Submission_Notes__c</fullName>
    <description>Asset section of submission notes</description>
    <label>Asset</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>