force-app/main/default/objects/Opportunity/fields/AUS__c.field-meta.xml
<CustomField>
    <fullName>AUS__c</fullName>
    <label>AUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>DU</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Non-QM</fullName>
            </value>
            <value>
                <fullName>GUS</fullName>
                <isActive>false</isActive>
                <label>GUS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>