force-app/main/default/objects/Opportunity/fields/BA_Email__c.field-meta.xml
<CustomField>
    <fullName>BA_Email__c</fullName>
    <formula>Buyers_Agent__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BA Email</label>
    <type>Text</type>
</CustomField>