force-app/main/default/objects/Opportunity/fields/Bank_Retirement_Stocks__c.field-meta.xml
<CustomField>
    <fullName>Bank_Retirement_Stocks__c</fullName>
    <description>Total of bank, retirement, stocks per Encompass field URLA.X50</description>
    <label>Bank/Retirement/Stocks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>