force-app/main/default/objects/Opportunity/fields/BE_Phone__c.field-meta.xml
<CustomField>
    <fullName>BE_Phone__c</fullName>
    <formula>Buyers_Agent__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BE Phone</label>
    <type>Text</type>
</CustomField>