force-app/main/default/objects/Opportunity/fields/Birthday_of_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Birthday_of_Closed_Date__c</fullName>
    <formula>IF(AND(MONTH(Closed_Date__c)=MONTH(TODAY()),DAY(Closed_Date__c)=DAY(TODAY())), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday of Closed Date</label>
    <type>Checkbox</type>
</CustomField>