force-app/main/default/objects/Opportunity/fields/Borrower_Contact__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Contact__c</fullName>
    <label>Borrower Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>