force-app/main/default/objects/Opportunity/fields/Borrower_FICO__c.field-meta.xml
<CustomField>
    <fullName>Borrower_FICO__c</fullName>
    <label>Borrower FICO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>