force-app/main/default/objects/Opportunity/fields/Borrower_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Nickname__c</fullName>
    <label>Borrower Nickname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>