force-app/main/default/objects/Opportunity/fields/Borrower_Paid__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Paid__c</fullName>
    <description>To establish whether the loan is lender paid or borrower paid</description>
    <label>LPC / BPC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lender Paid</fullName>
                <default>true</default>
                <label>Lender Paid</label>
            </value>
            <value>
                <fullName>Borrower Paid</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>