force-app/main/default/objects/Opportunity/fields/Borrower_Paid_Comp__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Paid_Comp__c</fullName>
    <inlineHelpText>Broker Fees field under 801 in Fee Itemization, Included in Total Orig Fees</inlineHelpText>
    <label>Borrower Paid Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>