force-app/main/default/objects/Opportunity/fields/Borrower_Record__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field will only be populated when the loan is added from Salesforce - Temporary field used to create Loan Contact Relationship records.</description>
    <label>Borrower</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loans (Borrower)</relationshipLabel>
    <relationshipName>Loans_Borrower</relationshipName>
    <type>Lookup</type>
</CustomField>