force-app/main/default/objects/Opportunity/fields/Broker_Fee_Text__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fee_Text__c</fullName>
    <label>Broker Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>