force-app/main/default/objects/Opportunity/fields/Brokerage_Charges__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Charges__c</fullName>
    <label>Brokerage Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>