force-app/main/default/objects/Opportunity/fields/Buydown__c.field-meta.xml
<CustomField>
    <fullName>Buydown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buydown</label>
    <type>Checkbox</type>
</CustomField>