force-app/main/default/objects/Opportunity/fields/Buyer_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Agent_Email__c</fullName>
    <label>Buyer Agent Email</label>
    <type>Email</type>
</CustomField>