force-app/main/default/objects/Opportunity/fields/Buyer_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Agent_Name__c</fullName>
    <label>Buyer Agent Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>