force-app/main/default/objects/Opportunity/fields/Buyer_s_Agent_Company__c.field-meta.xml
<CustomField>
    <fullName>Buyer_s_Agent_Company__c</fullName>
    <formula>Buyers_Agent__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer&apos;s Agent Company</label>
    <type>Text</type>
</CustomField>