force-app/main/default/objects/Opportunity/fields/Buyers_Agent__c.field-meta.xml
<CustomField>
    <fullName>Buyers_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyers Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loans (Buyers Agent)</relationshipLabel>
    <relationshipName>Buyers_Agent_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>