force-app/main/default/objects/Opportunity/fields/Buyers_Agent_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Buyers_Agent_Name_Formula__c</fullName>
    <formula>Buyers_Agent__r.FirstName + &quot; &quot; + Buyers_Agent__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyers Agent Name (Formula)</label>
    <type>Text</type>
</CustomField>