force-app/main/default/objects/Opportunity/fields/Cash_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cash_Deposit_Amount__c</fullName>
    <label>Cash Deposit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>