force-app/main/default/objects/Opportunity/fields/Cash_Deposit_Desc__c.field-meta.xml
<CustomField>
    <fullName>Cash_Deposit_Desc__c</fullName>
    <label>Cash Deposit Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>