force-app/main/default/objects/Opportunity/fields/Cash_From_To_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Cash_From_To_Borrower__c</fullName>
    <label>Cash From/(To) Borrower</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>