force-app/main/default/objects/Opportunity/fields/Cash_To_From__c.field-meta.xml
<CustomField>
    <fullName>Cash_To_From__c</fullName>
    <formula>Prepaids__c + Escrows_Collected__c + Closing_Costs__c + Discount_Points__c + Lender_Credit__c + Seller_Credit__c + Cash_Deposit_Amount__c + Refi_Total_Debts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cash To/From on Scenario Record Type</inlineHelpText>
    <label>Cash To/From</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>