force-app/main/default/objects/Opportunity/fields/CC_Paid_by_Seller__c.field-meta.xml
<CustomField>
    <fullName>CC_Paid_by_Seller__c</fullName>
    <description>Closing Costs Paid by Seller (ie Owners title)</description>
    <inlineHelpText>Closing Costs Paid by Seller (ie Owners title)</inlineHelpText>
    <label>CC Paid by Seller</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>