force-app/main/default/objects/Opportunity/fields/CD_Issued__c.field-meta.xml
<CustomField>
    <fullName>CD_Issued__c</fullName>
    <label>CD Issued</label>
    <type>Date</type>
</CustomField>