force-app/main/default/objects/Opportunity/fields/CD_Out_By__c.field-meta.xml
<CustomField>
    <fullName>CD_Out_By__c</fullName>
    <label>Acknowledge CD</label>
    <type>Date</type>
</CustomField>