force-app/main/default/objects/Opportunity/fields/ChagnedOwnerDateTime__c.field-meta.xml
<CustomField>
    <fullName>ChagnedOwnerDateTime__c</fullName>
    <label>ChagnedOwnerDateTime</label>
    <type>DateTime</type>
</CustomField>