force-app/main/default/objects/Opportunity/fields/CheckTest__c.field-meta.xml
<CustomField>
    <fullName>CheckTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckTest</label>
    <type>Checkbox</type>
</CustomField>