force-app/main/default/objects/Opportunity/fields/City_County_Tax_Stamps__c.field-meta.xml
<CustomField>
    <fullName>City_County_Tax_Stamps__c</fullName>
    <inlineHelpText>1204 in Fee Itemization</inlineHelpText>
    <label>City &amp; County Tax/Stamps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>