force-app/main/default/objects/Opportunity/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <formula>If(ISPICKVAL(StageName, &quot;Closed Won&quot;), CloseDate, If(ISPICKVAL(StageName, &quot;Closed Elsewhere&quot;), CloseDate, null))</formula>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>