force-app/main/default/objects/Opportunity/fields/Closed_Date_c_121__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_c_121__c</fullName>
    <formula>Closed_Date__c + 121</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed_Date__c + 121</label>
    <type>Date</type>
</CustomField>