force-app/main/default/objects/Opportunity/fields/Closed_End_2nd_Total__c.field-meta.xml
<CustomField>
    <fullName>Closed_End_2nd_Total__c</fullName>
    <description>Total of closed end 2nd per Encompass field 428</description>
    <label>Closed End 2nd Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>