force-app/main/default/objects/Opportunity/fields/Closing_Costs__c.field-meta.xml
<CustomField>
    <fullName>Closing_Costs__c</fullName>
    <label>Closing Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>