force-app/main/default/objects/Opportunity/fields/Closing_Disclosure_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Disclosure_Ordered_Date__c</fullName>
    <label>Closing Disclosure</label>
    <type>Date</type>
</CustomField>