force-app/main/default/objects/Opportunity/fields/Closing_Funds__c.field-meta.xml
<CustomField>
    <fullName>Closing_Funds__c</fullName>
    <label>Closing Funds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principle Balance Only</fullName>
            </value>
            <value>
                <fullName>Match to Total Payoff</fullName>
            </value>
            <value>
                <fullName>Add Fees to Balance</fullName>
            </value>
            <value>
                <fullName>Zero Due at Close</fullName>
            </value>
            <value>
                <fullName>&lt;=$500 in Hand (IRRRL/Streamline)</fullName>
            </value>
            <value>
                <fullName>2k Cash in Hand</fullName>
                <label>&lt;=$2,000 Cash in Hand (Conv)</label>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Cash Out</fullName>
            </value>
            <value>
                <fullName>Other - See Notes</fullName>
            </value>
            <value>
                <fullName>To be determined in escrow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>