force-app/main/default/objects/Opportunity/fields/Co_Borrower_Fico__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_Fico__c</fullName>
    <label>Co-Borrower Fico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>