force-app/main/default/objects/Opportunity/fields/Co_Borrower_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_Name__c</fullName>
    <label>Co-Borrower Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>