force-app/main/default/objects/Opportunity/fields/Co_Loan_Originator__c.field-meta.xml
<CustomField>
    <fullName>Co_Loan_Originator__c</fullName>
    <label>Co-Loan Originator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loan_Originator</valueSetName>
    </valueSet>
</CustomField>