force-app/main/default/objects/Opportunity/fields/Co_Loan_Originator_User__c.field-meta.xml
<CustomField>
    <fullName>Co_Loan_Originator_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co Loan Originator User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Co_Loans_Originated</relationshipName>
    <type>Lookup</type>
</CustomField>