force-app/main/default/objects/Opportunity/fields/CoBorrower_Record__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field will only be populated when Loan is added from Salesforce - temporary field used to create the Loan Contact Relationship records</description>
    <label>CoBorrower</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loans (CoBorrower)</relationshipLabel>
    <relationshipName>Loans_Coborrower</relationshipName>
    <type>Lookup</type>
</CustomField>