force-app/main/default/objects/Opportunity/fields/COE__c.field-meta.xml
<CustomField>
    <fullName>COE__c</fullName>
    <label>COE</label>
    <type>Date</type>
</CustomField>