force-app/main/default/objects/Opportunity/fields/Condo__c.field-meta.xml
<CustomField>
    <fullName>Condo__c</fullName>
    <formula>IF(CONTAINS(Subject_Prop_Type__c , &apos;Condo&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condo</label>
    <type>Checkbox</type>
</CustomField>