force-app/main/default/objects/Opportunity/fields/Conversation_Log__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Log__c</fullName>
    <label>Conversation Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>