force-app/main/default/objects/Opportunity/fields/Credit_Source__c.field-meta.xml
<CustomField>
    <fullName>Credit_Source__c</fullName>
    <description>Credit Report Vendor</description>
    <label>Credit Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UWM Safecheck</fullName>
            </value>
            <value>
                <fullName>UWM Hard Pull</fullName>
            </value>
            <value>
                <fullName>ACI Soft Pull</fullName>
            </value>
            <value>
                <fullName>ACI Hard Pull</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>