force-app/main/default/objects/Opportunity/fields/Credit_Submission_Notes__c.field-meta.xml
<CustomField>
    <fullName>Credit_Submission_Notes__c</fullName>
    <inlineHelpText>Credit section within submission notes</inlineHelpText>
    <label>Credit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>