force-app/main/default/objects/Opportunity/fields/Credit_Supplement_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Credit_Supplement_Ordered__c</fullName>
    <label>Credit Supplement Ordered</label>
    <type>Date</type>
</CustomField>