force-app/main/default/objects/Opportunity/fields/Credit_Supplement_Received__c.field-meta.xml
<CustomField>
    <fullName>Credit_Supplement_Received__c</fullName>
    <label>Credit Supplement Received</label>
    <type>Date</type>
</CustomField>