force-app/main/default/objects/Opportunity/fields/Credit_Supplement_Required__c.field-meta.xml
<CustomField>
    <fullName>Credit_Supplement_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Supplement Required</label>
    <type>Checkbox</type>
</CustomField>