force-app/main/default/objects/Opportunity/fields/Current_User_Access__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Access__c</fullName>
    <formula>IF (  OwnerId = $User.Id ||  Loan_Originator_User__c = $User.Id  , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Access</label>
    <type>Checkbox</type>
</CustomField>