force-app/main/default/objects/Opportunity/fields/Date_CTC__c.field-meta.xml
<CustomField>
    <fullName>Date_CTC__c</fullName>
    <label>Date CTC</label>
    <type>Date</type>
</CustomField>