force-app/main/default/objects/Opportunity/fields/Date_Sent_to_Processing__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_Processing__c</fullName>
    <label>Date Sent to Processing</label>
    <type>Date</type>
</CustomField>