force-app/main/default/objects/Opportunity/fields/Day_121__c.field-meta.xml
<CustomField>
    <fullName>Day_121__c</fullName>
    <formula>Closed_Date__c + 121</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 121</label>
    <type>Date</type>
</CustomField>