force-app/main/default/objects/Opportunity/fields/Day_151__c.field-meta.xml
<CustomField>
    <fullName>Day_151__c</fullName>
    <formula>Closed_Date__c + 151</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 151</label>
    <type>Date</type>
</CustomField>