force-app/main/default/objects/Opportunity/fields/Day_181__c.field-meta.xml
<CustomField>
    <fullName>Day_181__c</fullName>
    <formula>Closed_Date__c + 181</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 181</label>
    <type>Date</type>
</CustomField>