force-app/main/default/objects/Opportunity/fields/Days_Closed__c.field-meta.xml
<CustomField>
    <fullName>Days_Closed__c</fullName>
    <formula>If(Today()- CloseDate&lt;0,null,Today() - CloseDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>