force-app/main/default/objects/Opportunity/fields/Days_To_Hold_Until__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Hold_Until__c</fullName>
    <formula>Hold_Until__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Hold Until</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>