force-app/main/default/objects/Opportunity/fields/Diff_From_Today_s_Rate__c.field-meta.xml
<CustomField>
    <fullName>Diff_From_Today_s_Rate__c</fullName>
    <formula>Interest_Rate__c -  $CustomMetadata.Todays_Rate__mdt.X30_Year_Fixed.Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff From Today&apos;s Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>