force-app/main/default/objects/Opportunity/fields/Discolsure_Alert__c.field-meta.xml
<CustomField>
    <fullName>Discolsure_Alert__c</fullName>
    <formula>IF(AND(Date_of_Application__c-2&gt;=TODAY(), Date_of_Application__c != null), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discolsure Alert</label>
    <type>Checkbox</type>
</CustomField>