force-app/main/default/objects/Opportunity/fields/Discount_Points__c.field-meta.xml
<CustomField>
    <fullName>Discount_Points__c</fullName>
    <inlineHelpText>Points borrower is electing to pay to buy down the rate</inlineHelpText>
    <label>Discount Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>