force-app/main/default/objects/Opportunity/fields/Docs_Received__c.field-meta.xml
<CustomField>
    <fullName>Docs_Received__c</fullName>
    <description>Date Initial Borrower Docs Were Received for Review</description>
    <inlineHelpText>Date Initial Borrower Docs Were Received for Review</inlineHelpText>
    <label>Docs Received</label>
    <type>Date</type>
</CustomField>